@@ -1,5 +1,5 @@
-film.width = 640
-film.height = 480
+film.width = 1024
+film.height = 768
 scene.file = scenes/sky/sky2-glass.scn
 opencl.cpu.use = 1
 opencl.gpu.use = 1
