@@ -470,7 +470,7 @@ bool BiDirCPURenderThread::Bounce(const float time, Sampler *sampler,
 	BiDirCPURenderEngine *engine = (BiDirCPURenderEngine *)renderEngine;
 
 	Vector sampledDir;
-	BSDFEvent event;
+	BSDFEvent &event = pathVertex->bsdfEvent;
 	float bsdfPdfW, cosSampledDir;
 	const Spectrum bsdfSample = pathVertex->bsdf.Sample(&sampledDir,
 			sampler->GetSample(sampleOffset),
@@ -631,6 +631,7 @@ void BiDirCPURenderThread::RenderFunc() {
 			eyeVertex.depth = 1;
 			bool albedoToDo = true;
 			bool photonGICausticCacheUsed = false;
+			bool isTransmittedEyePath = true;
 			while (eyeVertex.depth <= engine->maxEyePathDepth) {
 				eyeSampleResult.firstPathVertex = (eyeVertex.depth == 1);
 				eyeSampleResult.lastPathVertex = (eyeVertex.depth == engine->maxEyePathDepth);
@@ -671,6 +672,9 @@ void BiDirCPURenderThread::RenderFunc() {
 						eyeSampleResult.objectID = 0;
 						eyeSampleResult.uv = UV(numeric_limits<float>::infinity(),
 								numeric_limits<float>::infinity());
+					} else if (isTransmittedEyePath) {
+						// I set to 0.0 also the alpha all purely transmitted paths hitting nothing
+						eyeSampleResult.alpha = 0.f;
 					}
 					break;
 				}
@@ -765,6 +769,8 @@ void BiDirCPURenderThread::RenderFunc() {
 
 				if (!Bounce(time, sampler, sampleOffset + 7, &eyeVertex, &eyeRay))
 					break;
+				
+				isTransmittedEyePath = isTransmittedEyePath && (eyeVertex.bsdfEvent & TRANSMIT);
 
 #ifdef WIN32
 				// Work around Windows bad scheduling
